<resources>
    <string name="app_name">e瞳大屏幕</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="cache_clear">清理缓存</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search">搜索</string>
    <string name="about">关于</string>
    <string name="search">搜索。。。</string>
    <string name="see_more">查看更多</string>
    <string name="see_less">收起</string>
    <string name="hot_search">热门标签</string>
    <string name="hot_service">热门发布方</string>
    <string name="hot_name">热门发布方名称</string>
    <string name="time">时间:</string>
    <string name="location">地点:</string>
    <string name="publisher">发起方:</string>
    <string name="speech_maker">演讲人:</string>
    <string name="open_web">在浏览器打开</string>
    <string name="night_model">夜间模式</string>
    <string name="menu_share">分享</string>
    <string name="label">标签:</string>
    <string name="empty">空空如也~</string>
    <string name="call_back">意见反馈</string>
    <string name="more_production">更多产品</string>

</resources>
