<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_title"
            android:textIsSelectable="true"
            android:layout_gravity="center_horizontal"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="标题"
            android:layout_margin="@dimen/activity_vertical_margin"
            />
        <LinearLayout
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"/>
            <TextView
                android:id="@+id/tv_time"
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="时间"/>
        </RelativeLayout>

        <RelativeLayout
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"/>
            <TextView
                android:id="@+id/tv_location"
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="地点"/>
        </RelativeLayout>

        <RelativeLayout
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speech_maker"/>
            <TextView
                android:textIsSelectable="true"
                android:id="@+id/tv_speech_maker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="演讲人"/>
        </RelativeLayout>

        <RelativeLayout
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher"/>
            <TextView
                android:textIsSelectable="true"
                android:id="@+id/tv_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="发起方"/>
        </RelativeLayout>

        <RelativeLayout
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label"/>
            <RelativeLayout
                android:layout_centerInParent="true"
                android:layout_width="200dp"
                android:layout_height="wrap_content">
                <com.example.heyong.lib.flowLayout.FlowLayout
                    android:layout_centerInParent="true"
                    android:id="@+id/flow_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:lineSpacing="@dimen/activity_horizontal_margin"
                    />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">
            <TextView
                android:textIsSelectable="true"
                android:id="@+id/tv_content_title"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="正文内容"/>
            <FrameLayout
                android:minHeight="128dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:elevation="2dp"
                    android:id="@+id/tv_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:elevation="1dp"
                    android:layout_gravity="bottom|right"
                    android:id="@+id/iv_can_print"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>